@@ -730,8 +730,10 @@ CREATE TABLE `tl_module` (
   `iso_order_conditions` int(10) unsigned NOT NULL default '0',
   `iso_addToAddressbook` char(1) NOT NULL default '',
   `iso_category_scope` varchar(64) NOT NULL default '',
+  `iso_list_where` varchar(255) NOT NULL default '',
   `iso_filterModules` blob NULL,
   `iso_use_quantity` char(1) NOT NULL default '',
+  `iso_hide_list` char(1) NOT NULL default '',
   `iso_perPage` varchar(64) NOT NULL default '',
   `iso_filterTpl` varchar(64) NOT NULL default '',
   `iso_filterFields` blob NULL,
