@@ -15,6 +15,8 @@ Version 1.3.beta2 (2011-??-??)
 - Added .html5 & .xhtml templates for Contao 2.10 (Ticket #457)
 - Added checkout stepcount classes (Ticket #491)
 - Added consistent surcharge classes to cart, checkout and order details (Ticket #494)
+- Added "hide in reader mode" option to product listing
+- Added SQL condition field to product listing (Ticket #114)
 - Improved: Allow subclasses of ModuleIsotopeProductFilter for filter modules
 - Improved: Allow subclasses of ModuleIsotopeProductFilter to cache request
 - Improved: new function generateRequestUrl to remove GET-parameters from request string
